2000-01-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwv.c: Bugfixes/improvements
	From: Dave Mills <mills@udel.edu>

	* configure.in: Get the quoting right on the sys_errlist check.
	From documentation by: Akim Demaille <akim@epita.fr>

2000-01-08  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: <netinet/ip.h> cannot be detected... 
	* ntpd/ntp_io.h: ...but every OS has it 
	* ntpd/refclock_oncore.c: Lint removal 
	* ntpq/ntpq_ops.c: Lint removal 
	* ntpq/refclock_chu.c: chu_major() is not an audio routine (?), lint 
	* libntp/icom.c: AIX doesn't have <sys/termios.h> 
	From: Marc.Brett@westgeo.com

	* ntpd/refclock_chu.c: NetBSD needs sys/ioctl.h
	(chu_debug): NetBSED-specific debug output.
	From: Frederick Bruckman <fb@enteract.com>

2000-01-06  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98m
	I skipped `l' - it looks like a `1'.
	
	* html/driver7.htm: Doc update
	* html/driver36.htm: Ditto
	* html/audio.htm: Ditto

	* ntpd/refclock_wwv.c: Dvae snuck another fix/change in on me.

	* configure.in: 4.0.98k

	* ntpd/refclock_chu.c (chu_start): Call icom_init with the speed
	* ntpd/refclock_wwv.c (wwv_start): Ditto, plus other improvements.
	* libntp/icom.c (icom_init): Add speed parameter
	* include/icom.h: Update declaration
	From: Dave Mills <mills@udel.edu>

	* include/Makefile.am (noinst_HEADERS): Added icom.h
	From: Frederick Bruckman <fb@enteract.com>

2000-01-05  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98j

	* ntpd/refclock_wwv.c (timecode): Make definition == declaration
	(wwv_newchan): Ditto
	(wwv_corr4): Dave fixed the declaration.

	* flock-build: Add rackety to the flock - it runs SunOS 4.1.3/cc

	* ntpd/refclock_wwv.c: Undo that declaration cleanup for now...

	* ntpd/ntp_io.c (open_socket): TOS support
	From: Marc.Brett@westgeo.com

2000-01-04  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwv.c: Declaration cleanup
	* ntpd/refclock_fg.c (fg_receive): Not all sprintf's are created